# Meldari

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql.yml  tests.yml
.reuse/: dep5
app/: CMakeLists.txt  logging.h  meldari.cpp  meldari.h  meldariconfig.cpp  meldariconfig.h  meldariutils.cpp  meldariutils.h  qtimezonevariant_p.h  userauthstoresql.cpp  userauthstoresql.h
app/controllers/: CMakeLists.txt  controlcenter.cpp  controlcenter.h  controlcenterdomains.cpp  controlcenterdomains.h  controlcenterusers.cpp  controlcenterusers.h  controlcenterusersettings.cpp  controlcenterusersettings.h  root.cpp  root.h
app/cutelee/: CMakeLists.txt  dateformattag.cpp  dateformattag.h  meldaricutelee.cpp  meldaricutelee.h
app/objects/: CMakeLists.txt  domain.cpp  domain.h  error.cpp  error.h  menuitem.cpp  menuitem.h  optionitem.h  simpleuser.cpp  simpleuser.h  user.cpp  user.h
app/translations/: meldari.de.ts  meldari.ts
app/validators/: CMakeLists.txt  melvalidatorpwcheck.cpp  melvalidatorpwcheck.h
common/: CMakeLists.txt  basedomain.cpp  basedomain.h  basedomain_p.h  baseuser.cpp  baseuser.h  baseuser_p.h  confignames.h.in  credentialbotan.cpp  credentialbotan.h  credentialbotan_p.h  meldaricommon_global.h  optionitem.cpp  optionitem.h  user.cpp  user.h  utils.cpp  utils.h
commonjs/: .gitignore  CMakeLists.txt  general.js  package.json  users.dox  users.js  usersettings.js  webpack.mix.js
ctl/: CMakeLists.txt  cli.cpp  cli.h  configuration.cpp  configuration.h  controller.cpp  controller.h  database.cpp  database.h  main.cpp  returncodes.h
ctl/commands/: CMakeLists.txt  command.cpp  command.h  databasecommand.cpp  databasecommand.h  databasemigrationcommand.cpp  databasemigrationcommand.h  databaserefreshcommand.cpp  databaserefreshcommand.h  databaseresetcommand.cpp  databaseresetcommand.h  databaserollbackcommand.cpp  databaserollbackcommand.h  useraddcommand.cpp  useraddcommand.h  usercommand.cpp  usercommand.h
ctl/dbmigrations/: CMakeLists.txt  m0001_create_users_table.cpp  m0001_create_users_table.h  m0002_create_options_table.cpp  m0002_create_options_table.h  m0003_create_usersettings_table.cpp  m0003_create_usersettings_table.h  m0004_create_domains_table.cpp  m0004_create_domains_table.h
ctl/translations/: meldarictl.de.ts  meldarictl.ts
templates/: CMakeLists.txt
templates/common/: .gitignore  CMakeLists.txt  domains.js  general.dox  general.js  mix-manifest.json  package.json  users.dox  users.js  usersettings.js  utils.js  webpack.mix.js
templates/meldari/: .gitignore  CMakeLists.txt  metadata.json  mix-manifest.json  package.json  webpack.mix.js
templates/meldari/assets/: CMakeLists.txt
templates/meldari/assets/js/: CMakeLists.txt  domains.js  general.js  index.js  licenseheader.js  users.js  usersAdd.js  usersEdit.js  usersList.js  usersRemove.js  usersettings.js  utils.js  validUntilInput.js  validuntilinputs.js
templates/meldari/assets/sass/: CMakeLists.txt  style.scss
templates/meldari/site/: CMakeLists.txt  base.html
templates/meldari/site/cc/: CMakeLists.txt  base.html  index.html  login.html
templates/meldari/site/cc/domains/: CMakeLists.txt  addDomainModal.html  index.html  indexPageHeader.html
templates/meldari/site/cc/parts/: CMakeLists.txt  datetimeInputWithLabel.html  domainInputWithLabel.html  emailInputWithLabel.html  inputWithLabel.html  modal.html  pageHeader.html  page_header.html  passwordInputWithLabel.html  roInputWithLabel.html  roPlaintextInputWithLabel.html  selectWithLabel.html  textInputWithLabel.html  validUntilInputWithLabel.html
templates/meldari/site/cc/users/: CMakeLists.txt  addUserModal.html  editUserModal.html  index.html  indexPageHeader.html  removeUserModal.html
templates/meldari/site/cc/usersettings/: CMakeLists.txt  index.html  pageHeader.html  passwordTab.html  profileTab.html
templates/meldari/site/public/: CMakeLists.txt  base.html
tests/: CMakeLists.txt  testbasedomain.cpp  testbaseuser.cpp  testcredentialbotan.cpp  testdomain.cpp  testerrorobject.cpp  testsimpleuser.cpp  testuser.cpp
